Reprise: remove accidental pages created from MDX partials (#69)
Initially attempted here:
https://github.com/memfault/memfault-docs/pull/68

I realized the pages were being created anyway.

A "fix" is to move all partials into `src/pages/_partials/*` and prepend
**all path sections** with an underscore.

To learn the "why", please check out my comments here:
https://github.com/facebook/docusaurus/pull/3196#issuecomment-861560567

--- a/docs/ci/install-memfault-cli.mdx
+++ b/docs/ci/install-memfault-cli.mdx
@@ -4,7 +4,7 @@ title: Memfault CLI tool
 sidebar_label: Memfault CLI tool
 ---
 
-import AuthTokenRequiredCallout from "./_components/auth-token-required-callout.mdx";
+import AuthTokenRequiredCallout from "@site/src/pages/_partials/_auth-token-required-callout.mdx";
 
 The Memfault CLI tool is a simple command-line program which purpose is to make
 integrations with the Memfault cloud from other systems, like continuous
