--- a/docs/embedded/export-chunks-over-console.mdx
+++ b/docs/embedded/export-chunks-over-console.mdx
@@ -4,7 +4,7 @@ title: Post chunks with Memfault CLI
 sidebar_label: Extract Chunks with Memfault CLI
 ---
 
-import PostChunksWithMemfaultCli from "./_steps/post-data-with-memfault-cli.mdx";
+import PostChunksWithMemfaultCli from "@site/src/pages/_partials/_steps/_post-data-with-memfault-cli.mdx";
 
 In the following tutorial we will discuss how to use the Memfault SDK data
 export API to collect "chunks" from a device and then post them to the Memfault
