--- a/docs/embedded/metrics-api.mdx
+++ b/docs/embedded/metrics-api.mdx
@@ -4,7 +4,7 @@ title: Collecting Device Metrics
 sidebar_label: Collecting Device Metrics
 ---
 
-import IntegrationCompletePrerequisite from "./_components/integration-complete-prerequisite.mdx";
+import IntegrationCompletePrerequisite from "@site/src/pages/_partials/_integration-complete-prerequisite.mdx";
 
 <p>
 <details>
