--- a/docs/embedded/reboot-reason-tracking.mdx
+++ b/docs/embedded/reboot-reason-tracking.mdx
@@ -4,7 +4,7 @@ title: Reboot Reason Tracking
 sidebar_label: Reboot Reason Tracking
 ---
 
-import IntegrationCompletePrerequisite from "./_components/integration-complete-prerequisite.mdx";
+import IntegrationCompletePrerequisite from "@site/src/pages/_partials/_integration-complete-prerequisite.mdx";
 
 There are many reasons a device may reboot in the field — whether it be due to a
 crash, a brown out, or a firmware update.
