--- a/docs/embedded/self-serve-local-testing.mdx
+++ b/docs/embedded/self-serve-local-testing.mdx
@@ -4,14 +4,14 @@ title: Local Testing
 sidebar_label: Local Testing
 ---
 
-import CreateProjectKey from "./_steps/create-project-key.mdx";
-import UploadSymbolFile from "./_steps/upload-symbol-file.mdx";
-import DataTransferTroubleshooting from "./_steps/data-transfer-troubleshooting.mdx";
-import PostChunksLocally from "./_steps/post-chunks-locally.mdx";
-import PublishDataToCloud from "./_steps/publish-data-to-cloud.mdx";
-import DefineFirstTraceEvent from "./_steps/define-first-trace-event.mdx";
-import DefineFirstHeartbeat from "./_steps/define-first-heartbeat.mdx";
-import AddCliTestCommands from "./_steps/add-cli-test-commands.mdx";
+import CreateProjectKey from "@site/src/pages/_partials/_steps/_create-project-key.mdx";
+import UploadSymbolFile from "@site/src/pages/_partials/_steps/_upload-symbol-file.mdx";
+import DataTransferTroubleshooting from "@site/src/pages/_partials/_steps/_data-transfer-troubleshooting.mdx";
+import PostChunksLocally from "@site/src/pages/_partials/_steps/_post-chunks-locally.mdx";
+import PublishDataToCloud from "@site/src/pages/_partials/_steps/_publish-data-to-cloud.mdx";
+import DefineFirstTraceEvent from "@site/src/pages/_partials/_steps/_define-first-trace-event.mdx";
+import DefineFirstHeartbeat from "@site/src/pages/_partials/_steps/_define-first-heartbeat.mdx";
+import AddCliTestCommands from "@site/src/pages/_partials/_steps/_add-cli-test-commands.mdx";
 
 In this guide we will walk through how to add some initial data collection
 leveraging Memfault and verify that everything is working properly.
