--- a/docs/embedded/test-data-collection-with-gdb.mdx
+++ b/docs/embedded/test-data-collection-with-gdb.mdx
@@ -4,7 +4,7 @@ title: Post Chunks with GDB
 sidebar_label: Extract Chunks with GDB
 ---
 
-import PostChunksWithGdb from "./_steps/post-data-with-gdb.mdx";
+import PostChunksWithGdb from "@site/src/pages/_partials/_steps/_post-data-with-gdb.mdx";
 
 In the following tutorial we will walk through how to post chunks directly to
 the Memfault cloud using the `memfault` GDB commands included in the
