--- a/docs/embedded/xilinx-a53-guide.mdx
+++ b/docs/embedded/xilinx-a53-guide.mdx
@@ -8,16 +8,16 @@ This tutorial will go over integrating the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
 a system using the Xilinx A53 (i.e Zynq UltraScale+) in a baremetal environment.
 
-import CloneSdk from "./_steps/clone-sdk.mdx";
-import CorePlatformDependencies from "./_steps/core-platform-dependencies.mdx";
-import TimerDependencies from "./_steps/timer-dependencies.mdx";
-import AcrhitectureDependencies from "./_steps/arch-dependencies.mdx";
-import RebootReasonDependency from "./_steps/reboot-reason-dependency.mdx";
-import DefineFirstHeartbeat from "./_steps/define-first-heartbeat.mdx";
-import DefineFirstTraceEvent from "./_steps/define-first-trace-event.mdx";
-import PostChunksLocally from "./_steps/post-chunks-locally.mdx";
-import UploadSymbolFile from "./_steps/upload-symbol-file.mdx";
-import PublishDataToCloud from "./_steps/publish-data-to-cloud.mdx";
+import CloneSdk from "@site/src/pages/_partials/_steps/_clone-sdk.mdx";
+import CorePlatformDependencies from "@site/src/pages/_partials/_steps/_core-platform-dependencies.mdx";
+import TimerDependencies from "@site/src/pages/_partials/_steps/_timer-dependencies.mdx";
+import AcrhitectureDependencies from "@site/src/pages/_partials/_steps/_arch-dependencies.mdx";
+import RebootReasonDependency from "@site/src/pages/_partials/_steps/_reboot-reason-dependency.mdx";
+import DefineFirstHeartbeat from "@site/src/pages/_partials/_steps/_define-first-heartbeat.mdx";
+import DefineFirstTraceEvent from "@site/src/pages/_partials/_steps/_define-first-trace-event.mdx";
+import PostChunksLocally from "@site/src/pages/_partials/_steps/_post-chunks-locally.mdx";
+import UploadSymbolFile from "@site/src/pages/_partials/_steps/_upload-symbol-file.mdx";
+import PublishDataToCloud from "@site/src/pages/_partials/_steps/_publish-data-to-cloud.mdx";
 
 ## SDK Integration and Port
 
