--- a/src/pages/_partials/_steps/_post-chunks-locally.mdx
+++ b/src/pages/_partials/_steps/_post-chunks-locally.mdx
@@ -1,6 +1,6 @@
-import PostChunksWithMemfaultCli from "./post-data-with-memfault-cli.mdx";
-import PostChunksWithGdb from "./post-data-with-gdb.mdx";
-import PostChunksWithMemfaultUI from "./post-data-with-memfault-ui.mdx";
+import PostChunksWithMemfaultCli from "./_post-data-with-memfault-cli.mdx";
+import PostChunksWithGdb from "./_post-data-with-gdb.mdx";
+import PostChunksWithMemfaultUI from "./_post-data-with-memfault-ui.mdx";
 
 Prior to having an end-to-end transport in place, Memfault data can be exported
 over any serial connection or via GDB directly.
