--- a/docs/embedded/arm-cortex-m-guide.mdx
+++ b/docs/embedded/arm-cortex-m-guide.mdx
@@ -4,26 +4,26 @@ title: ARM Cortex-M Integration Guide
 sidebar_label: ARM Cortex-M
 ---
 
-import TryFlow from "./_steps/try-flow.mdx";
-import CloneSdk from "./_steps/clone-sdk.mdx";
-import AddSources from "./_steps/add-sources.mdx";
-import CorePlatformDependencies from "./_steps/core-platform-dependencies.mdx";
-import AddBuildId from "./_steps/add-build-id.mdx";
-import LoggingDependency from "./_steps/logging-dependency.mdx";
-import RtosPorts from "./_steps/rtos-ports.mdx";
-import CoredumpDependency from "./_steps/coredump-dependency.mdx";
-import RegisterAssert from "./_steps/register-assert.mdx";
-import CreateProjectKey from "./_steps/create-project-key.mdx";
-import UploadSymbolFile from "./_steps/upload-symbol-file.mdx";
-import DataTransferTroubleshooting from "./_steps/data-transfer-troubleshooting.mdx";
-import PostChunksLocally from "./_steps/post-chunks-locally.mdx";
-import PublishDataToCloud from "./_steps/publish-data-to-cloud.mdx";
-import DefineFirstTraceEvent from "./_steps/define-first-trace-event.mdx";
-import DefineFirstHeartbeat from "./_steps/define-first-heartbeat.mdx";
-import AddCliTestCommands from "./_steps/add-cli-test-commands.mdx";
-import FwSdkFeatures from "./_steps/sdk-features.mdx";
-import MetricTimerDependency from "./_steps/metric-timer-dependency.mdx";
-import RebootTrackingDependency from "./_steps/reboot-tracking-dependency.mdx";
+import TryFlow from "@site/src/pages/_partials/_steps/_try-flow.mdx";
+import CloneSdk from "@site/src/pages/_partials/_steps/_clone-sdk.mdx";
+import AddSources from "@site/src/pages/_partials/_steps/_add-sources.mdx";
+import CorePlatformDependencies from "@site/src/pages/_partials/_steps/_core-platform-dependencies.mdx";
+import AddBuildId from "@site/src/pages/_partials/_steps/_add-build-id.mdx";
+import LoggingDependency from "@site/src/pages/_partials/_steps/_logging-dependency.mdx";
+import RtosPorts from "@site/src/pages/_partials/_steps/_rtos-ports.mdx";
+import CoredumpDependency from "@site/src/pages/_partials/_steps/_coredump-dependency.mdx";
+import RegisterAssert from "@site/src/pages/_partials/_steps/_register-assert.mdx";
+import CreateProjectKey from "@site/src/pages/_partials/_steps/_create-project-key.mdx";
+import UploadSymbolFile from "@site/src/pages/_partials/_steps/_upload-symbol-file.mdx";
+import DataTransferTroubleshooting from "@site/src/pages/_partials/_steps/_data-transfer-troubleshooting.mdx";
+import PostChunksLocally from "@site/src/pages/_partials/_steps/_post-chunks-locally.mdx";
+import PublishDataToCloud from "@site/src/pages/_partials/_steps/_publish-data-to-cloud.mdx";
+import DefineFirstTraceEvent from "@site/src/pages/_partials/_steps/_define-first-trace-event.mdx";
+import DefineFirstHeartbeat from "@site/src/pages/_partials/_steps/_define-first-heartbeat.mdx";
+import AddCliTestCommands from "@site/src/pages/_partials/_steps/_add-cli-test-commands.mdx";
+import FwSdkFeatures from "@site/src/pages/_partials/_steps/_sdk-features.mdx";
+import MetricTimerDependency from "@site/src/pages/_partials/_steps/_metric-timer-dependency.mdx";
+import RebootTrackingDependency from "@site/src/pages/_partials/_steps/_reboot-tracking-dependency.mdx";
 
 ## Overview
 
