MFLT-3720: Rename URLs and links containing "embedded" to MCU and add redirects (#72)
* Rename URLs and links containing "embedded" to MCU and add redirects

* Prettified Code!

* Fix two additional broken links

* Fix .forestry/settings.yml

Co-authored-by: fnune <fnune@users.noreply.github.com>

--- a/docs/mcu/esp32-guide.mdx
+++ b/docs/mcu/esp32-guide.mdx
@@ -196,11 +196,11 @@ partition CSV file". Optionally, you can edit the sdkconfig file directly
 
 #### _Metrics and Trace Definitions_
 
-The [device metrics](/docs/embedded/metrics-api) and
-[trace event](/docs/embedded/trace-events) subsystems require configuration
-files to be added to your include path (`memfault_metrics_heartbeat_config.def`
-& `memfault_trace_reason_user_config.def`, respectively). Because you copied
-them to your `main` directory these files' locations should be known to CMake.
+The [device metrics](/docs/mcu/metrics-api) and
+[trace event](/docs/mcu/trace-events) subsystems require configuration files to
+be added to your include path (`memfault_metrics_heartbeat_config.def` &
+`memfault_trace_reason_user_config.def`, respectively). Because you copied them
+to your `main` directory these files' locations should be known to CMake.
 
 #### _memfault_platform_get_device_info()_
 
