--- a/docs/mcu/event-serialization-overview.mdx
+++ b/docs/mcu/event-serialization-overview.mdx
@@ -5,7 +5,7 @@ sidebar_label: Event Serialization
 ---
 
 This article walks through the serialization strategy used by the Memfault
-[Metrics Component](/docs/embedded/metrics-api) and event subsystem in the
+[Metrics Component](/docs/mcu/metrics-api) and event subsystem in the
 [memfault-firmware-sdk](https://github.com/memfault/memfault-firmware-sdk). It
 also discusses the advantages of the approach over other standard embedded
 serialization strategies by walking through a real-world example.
