--- a/docs/mcu/export-chunks-over-console.mdx
+++ b/docs/mcu/export-chunks-over-console.mdx
@@ -35,7 +35,7 @@ void some_periodic_task_or_cli_cmd(void) {
 
 By default, the data_export module will dump results to the console using the
 `memfault_platform_log` implementation that was added as part of the
-[initial integration](/docs/embedded/introduction#getting-started).
+[initial integration](/docs/mcu/introduction#getting-started).
 
 However, the location can be overriden so data can be published elsewhere (i.e
 directly to a file):
