--- a/src/pages/_partials/_steps/_data-transfer-troubleshooting.mdx
+++ b/src/pages/_partials/_steps/_data-transfer-troubleshooting.mdx
@@ -2,10 +2,10 @@ If you encounter any issues in your data transfer implementation, Memfault has
 tools to help debug!
 
 - A UI you can use to
-  [view the raw "Chunk" data payloads](/docs/embedded/test-patterns-for-chunks-endpoint#troubleshooting)
+  [view the raw "Chunk" data payloads](/docs/mcu/test-patterns-for-chunks-endpoint#troubleshooting)
   that have arrived for your project.
-- [Precanned Data Payloads](/docs/embedded/test-patterns-for-chunks-endpoint)
-  you can pass through your `user_transport_send_chunk_data()` implementation to
-  test data transfer in isolation.
-- A [GDB Script](/docs/embedded/test-data-collection-with-gdb) which can be
-  installed to send chunks programatically every time a breakpoint is hit.
+- [Precanned Data Payloads](/docs/mcu/test-patterns-for-chunks-endpoint) you can
+  pass through your `user_transport_send_chunk_data()` implementation to test
+  data transfer in isolation.
+- A [GDB Script](/docs/mcu/test-data-collection-with-gdb) which can be installed
+  to send chunks programatically every time a breakpoint is hit.
