--- a/src/pages/_partials/_steps/_publish-data-to-cloud.mdx
+++ b/src/pages/_partials/_steps/_publish-data-to-cloud.mdx
@@ -1,7 +1,7 @@
 Extensive details about how data from the Memfault SDK makes it to the cloud
-[can be found here](/docs/embedded/data-from-firmware-to-the-cloud). In short,
-the Memfault SDK packetizes data into "chunks" that must be pushed to the
-Memfault cloud via the
+[can be found here](/docs/mcu/data-from-firmware-to-the-cloud). In short, the
+Memfault SDK packetizes data into "chunks" that must be pushed to the Memfault
+cloud via the
 [chunk REST endpoint](https://api-docs.memfault.com/?version=latest#66b0e390-2c3e-4c0d-b6c2-836a287b9e5f).
 
 The Memfault SDK exposes an API that packetizes Memfault data into "chunks".
