--- a/docs/mcu/arm-gcc-guide.mdx
+++ b/docs/mcu/arm-gcc-guide.mdx
@@ -29,7 +29,7 @@ types of data which can be collected by the SDK (such as coredumps and metrics).
 Here's an example where Trace Events are captured for Bluetooth protocol CRC
 errors and invalid message IDs:
 
-![](/img/docs/embedded/trace-reason-example.png)
+![](/img/docs/mcu/trace-reason-example.png)
 
 ### Clone Memfault SDK
 
@@ -274,7 +274,7 @@ At this point you should be able to generate a test trace event and push it to
 the Memfault UI. You can confirm the issue has arrived succesfully by navigating
 to the "Issues" page. Follow the link pointed to below and upload a symbol file.
 
-![](/img/docs/embedded/first-trace.png)
+![](/img/docs/mcu/first-trace.png)
 
 After this step you will see the trace in the list of issues!
 
@@ -291,17 +291,17 @@ If you run into any issues with your data transfer implementation, we have tools
 to help!
 
 - A UI you can use to
-  [view the raw "Chunk" data payloads](/docs/embedded/test-patterns-for-chunks-endpoint#troubleshooting)
+  [view the raw "Chunk" data payloads](/docs/mcu/test-patterns-for-chunks-endpoint#troubleshooting)
   that have arrived for your project.
-- [Precanned Data Payloads](/docs/embedded/test-patterns-for-chunks-endpoint)
-  you can pass through your `user_transport_send_chunk_data()` implementation to
-  test data transfer in isolation.
-- A [GDB Script](/docs/embedded/test-data-collection-with-gdb) which can be
-  installed to send chunks programatically every time a breakpoint is hit.
+- [Precanned Data Payloads](/docs/mcu/test-patterns-for-chunks-endpoint) you can
+  pass through your `user_transport_send_chunk_data()` implementation to test
+  data transfer in isolation.
+- A [GDB Script](/docs/mcu/test-data-collection-with-gdb) which can be installed
+  to send chunks programatically every time a breakpoint is hit.
 
 ### Next Steps
 
 With the transport path in place and a minimal set of data flowing, there's now
 a number of firmware-only changes which can be made to start collecting other
 diagnostic data from your system.
-[You can find links to step-by-step guides for integrating each subsystem here](/docs/embedded/introduction#modules).
+[You can find links to step-by-step guides for integrating each subsystem here](/docs/mcu/introduction#modules).
