--- a/src/pages/_partials/_integration-guide-table.mdx
+++ b/src/pages/_partials/_integration-guide-table.mdx
@@ -1,10 +1,10 @@
 <center>
 
-| MCU Architecture |                           Getting Started Guide                           |
-| ---------------- | :-----------------------------------------------------------------------: |
-| ARM Cortex-M     |    [ARM Cortex-M Integration Guide](/docs/embedded/arm-cortex-m-guide)    |
-| nRF Connect SDK  | [nRF Connect SDK Integration Guide](/docs/embedded/nrf-connect-sdk-guide) |
-| ESP32 ESP-IDF    |       [ESP32 ESP-IDF Integration Guide](/docs/embedded/esp32-guide)       |
-| ESP8266          |  [ESP8266 RTOS Integration Guide](/docs/embedded/esp8266-rtos-sdk-guide)  |
+| MCU Architecture |                        Getting Started Guide                         |
+| ---------------- | :------------------------------------------------------------------: |
+| ARM Cortex-M     |    [ARM Cortex-M Integration Guide](/docs/mcu/arm-cortex-m-guide)    |
+| nRF Connect SDK  | [nRF Connect SDK Integration Guide](/docs/mcu/nrf-connect-sdk-guide) |
+| ESP32 ESP-IDF    |       [ESP32 ESP-IDF Integration Guide](/docs/mcu/esp32-guide)       |
+| ESP8266          |  [ESP8266 RTOS Integration Guide](/docs/mcu/esp8266-rtos-sdk-guide)  |
 
 </center>
