--- a/src/pages/_partials/_steps/_sdk-features.mdx
+++ b/src/pages/_partials/_steps/_sdk-features.mdx
@@ -1,14 +1,14 @@
 Upon completion of the integration, the following subcomponents will be added to
 your system!
 
-- [Reboot Reason Tracking](/docs/embedded/reboot-reason-tracking)
+- [Reboot Reason Tracking](/docs/mcu/reboot-reason-tracking)
 
-![](/img/docs/embedded/reboot-reason-chart.png)
+![](/img/docs/mcu/reboot-reason-chart.png)
 
-- [Error Tracking with Trace Events](/docs/embedded/trace-events)
+- [Error Tracking with Trace Events](/docs/mcu/trace-events)
 
-![](/img/docs/embedded/trace-reason-example.png)
+![](/img/docs/mcu/trace-reason-example.png)
 
-- [RAM-backed stack dump Collection](/docs/embedded/coredumps)
+- [RAM-backed stack dump Collection](/docs/mcu/coredumps)
 
-![](/img/docs/embedded/logs-with-coredump.png)
+![](/img/docs/mcu/logs-with-coredump.png)
