Use ProjectAwareCreateAProject consistently (#70)
* Use ProjectAwareCreateAProject consistently

* Prettified Code!

Co-authored-by: fnune <fnune@users.noreply.github.com>

--- a/docs/android/android-getting-started-guide.mdx
+++ b/docs/android/android-getting-started-guide.mdx
@@ -4,10 +4,14 @@ title: Getting Started
 sidebar_label: Getting Started
 ---
 
+import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
+
 This tutorial will cover integrating the [Bort SDK](android-bort.mdx) into a
 system running Android 10.
 
 ## Integration Steps
+
+<ProjectAwareCreateAProject />
 
 ### Clone Bort SDK
 
