--- a/docs/mcu/arm-cortex-m-guide.mdx
+++ b/docs/mcu/arm-cortex-m-guide.mdx
@@ -4,6 +4,8 @@ title: ARM Cortex-M Integration Guide
 sidebar_label: ARM Cortex-M
 ---
 
+import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
+
 import TryFlow from "@site/src/pages/_partials/_steps/_try-flow.mdx";
 import CloneSdk from "@site/src/pages/_partials/_steps/_clone-sdk.mdx";
 import AddSources from "@site/src/pages/_partials/_steps/_add-sources.mdx";
@@ -13,7 +15,6 @@ import LoggingDependency from "@site/src/pages/_partials/_steps/_logging-depende
 import RtosPorts from "@site/src/pages/_partials/_steps/_rtos-ports.mdx";
 import CoredumpDependency from "@site/src/pages/_partials/_steps/_coredump-dependency.mdx";
 import RegisterAssert from "@site/src/pages/_partials/_steps/_register-assert.mdx";
-import CreateProjectKey from "@site/src/pages/_partials/_steps/_create-project-key.mdx";
 import UploadSymbolFile from "@site/src/pages/_partials/_steps/_upload-symbol-file.mdx";
 import DataTransferTroubleshooting from "@site/src/pages/_partials/_steps/_data-transfer-troubleshooting.mdx";
 import PostChunksLocally from "@site/src/pages/_partials/_steps/_post-chunks-locally.mdx";
@@ -38,6 +39,8 @@ or TI ARM Compiler.
 ### (Optionally) Collect a coredump capture using GDB
 
 <TryFlow />
+
+<ProjectAwareCreateAProject />
 
 ## Integration Steps
 
