--- a/docs/mcu/esp8266-rtos-sdk-guide.mdx
+++ b/docs/mcu/esp8266-rtos-sdk-guide.mdx
@@ -35,7 +35,7 @@ your system!
 
 ## Integration Steps
 
-:::caution
+:::important
 
 This tutorial assumes you have a working
 [ESP8266 RTOS SDK environment](https://docs.espressif.com/projects/esp8266-rtos-sdk/en/latest/get-started/index.html)
