MFLT-3540 Update documentation about uploading symbol files (#73)
Update the docs around uploading symbol files to be in sync again with the latest changes around using Build Ids to match uploaded data with symbol files:

- The main addition is `docs/embedded/symbol-file-build-ids.mdx`. This page explains the concepts involved with matching uploaded data and symbol files. I also added detailed CLI upload instructions there. I debated on splitting that off in a page of its own, but at the end of the day left it there.
- Refreshed the Memfault CLI tool doc
- Removed `uploading-artifacts-api.mdx`. This is/was outdated.
- Removed `docs/embedded/uploading-software-versions.mdx`. While the documented approach to uploading symbol files through Software Versions still works, there's little reason to upload symbols that way and we want to steer people towards using Build Ids instead.
- Removed `docs/platform/releasing-firmware.mdx `. Looked stale and could not find any references to it.

I will update references / redirects to deleted documentation in a separate monorepo PR and link it here.

--- a/docs/android/android-releases-guide.mdx
+++ b/docs/android/android-releases-guide.mdx
@@ -155,8 +155,7 @@ The complete Memfault CLI invocation to upload the OTA payload:
 
 ```bash
 $ cd /dev/smartfridge/
-$ memfault --email ${YOUR_EMAIL} \
-  --password ${YOUR_USER_API_KEY} \
+$ memfault --org-token ${YOUR_ORG_TOKEN} \
   --org ${YOUR_ORG_SLUG} \
   --project ${YOUR_PROJECT_SLUG} \
   upload-ota-payload \
@@ -177,8 +176,7 @@ arguments as environment variables to your shell init file or via the command
 line:
 
 ```bash
-$ export MEMFAULT_EMAIL=<email address associated with your account>
-$ export MEMFAULT_PASSWORD=<User Api Key for account>
+$ export MEMFAULT_ORG_TOKEN=<Organization Token>
 $ export MEMFAULT_ORG=<Organization slug>
 $ export MEMFAULT_PROJECT=<Project slug>
 ```
