--- a/docs/android/uploading-android-bugreports.mdx
+++ b/docs/android/uploading-android-bugreports.mdx
@@ -39,7 +39,7 @@ To upload all symbol files, run this command:
 
 ```bash
 $ memfault --email <EMAIL> --password <PASSWORD> --org <ORG_SLUG> \
-    --project <PROJ_SLUG> upload-symbols out/target/product/generic/symbols
+    --project <PROJ_SLUG> upload-aosp-symbols out/target/product/generic/symbols
 ```
 
 It's best to hook this into Continuous Integration when a build is released for
