--- a/docs/mcu/arm-cortex-m-guide.mdx
+++ b/docs/mcu/arm-cortex-m-guide.mdx
@@ -10,6 +10,7 @@ import TryFlow from "@site/src/pages/_partials/_steps/_try-flow.mdx";
 import CloneSdk from "@site/src/pages/_partials/_steps/_clone-sdk.mdx";
 import AddSources from "@site/src/pages/_partials/_steps/_add-sources.mdx";
 import CorePlatformDependencies from "@site/src/pages/_partials/_steps/_core-platform-dependencies.mdx";
+import AddBuildIdIntro from "@site/src/pages/_partials/_steps/_add-build-id-intro.mdx";
 import AddBuildId from "@site/src/pages/_partials/_steps/_add-build-id.mdx";
 import LoggingDependency from "@site/src/pages/_partials/_steps/_logging-dependency.mdx";
 import RtosPorts from "@site/src/pages/_partials/_steps/_rtos-ports.mdx";
@@ -82,6 +83,7 @@ or TI ARM Compiler.
 
 ### Add a Unique Identifier to target
 
+<AddBuildIdIntro />
 <AddBuildId />
 
 ### Confirm Integration Links
