--- a/docs/mcu/demo-cli.mdx
+++ b/docs/mcu/demo-cli.mdx
@@ -234,7 +234,7 @@ the event storage, they will both be cleared and ready for new data.
 ⚠️ If the upload succeeds but you don't see the data processed on Memfault, go
 to the Issues page and click on "Queue Status" to see the status of recent
 uploads. You probably need to
-[upload the symbols](uploading-software-versions.mdx).
+[upload the symbols](/docs/mcu/symbol-file-build-ids#upload-symbol-files-cli).
 
 ### `post_chunk`
 
@@ -259,7 +259,8 @@ See the instructions in the reference implementation for how to do this.
 the event storage, they will both be cleared and ready for new data.
 
 ⚠️ If the upload succeeds but you don't see the data processed on Memfault, you
-probably need to [upload the symbols](uploading-software-versions.mdx).
+probably need to
+[upload the symbols](/docs/mcu/symbol-file-build-ids#upload-symbol-files-cli).
 
 ## SDK Components
 
