--- a/blog/2021-01-31.mdx
+++ b/blog/2021-01-31.mdx
@@ -30,8 +30,8 @@ CSV upload.
 ## MCU
 
 - You can now download a Coredump as an .elf file, which can then be loaded into
-  GDB as long as your version of GDB is compiled with core dump support. For
-  more information, [reference the docs](https://mflt.io/coredump-elf-with-gdb).
+  GDB as long as your version of GDB is compiled with coredump support. For more
+  information, [reference the docs](https://mflt.io/coredump-elf-with-gdb).
 
 <p align="center">
   <img width="600" src="/img/blog/2021-01-31-download-coredump.png" />
