--- a/src/pages/_partials/_steps/_upload-symbol-file.mdx
+++ b/src/pages/_partials/_steps/_upload-symbol-file.mdx
@@ -11,7 +11,7 @@ After this step you will see the trace in the list of issues!
 
 :::tip
 
-You can programatically upload symbol files with the
+You can programmatically upload symbol files with the
 [Memfault CLI tool](/docs/ci/install-memfault-cli).
 
 :::
