Note that SDK >= 0.20.0 is required for Build Ids (#79)
![2021-06-17_19-31](https://user-images.githubusercontent.com/193881/122446134-9c5e2800-cfa2-11eb-8f96-6b9523eb33ba.png)
![2021-06-17_19-30](https://user-images.githubusercontent.com/193881/122446137-9cf6be80-cfa2-11eb-8037-17c37e1411ce.png)

--- a/docs/mcu/symbol-file-build-ids.mdx
+++ b/docs/mcu/symbol-file-build-ids.mdx
@@ -21,15 +21,16 @@ must have that same identifying metadata.
 
 There are 3 types of identifiers:
 
-|                                                    | Memfault Build Id | GNU Build Id | Software Type & Version |
-| -------------------------------------------------- | ----------------- | ------------ | ----------------------- |
-| Example                                            | `a1e688...`       | `a1e688...`  | `wifi-fw`/`1.0.0`       |
-| Automatically generated hash                       | ✅                | ✅           |
-| Manually chosen                                    |                   |              | ✅                      |
-| Compiler requirement                               |                   | GNU/gcc      |                         |
-| ID embedded inside ELF                             | ✅                | ✅           |
-| ID passed manually upon Symbol File upload         |                   |              | ✅                      |
-| Requires running Python script to post-process ELF | ✅                |              |
+|                                                                          | Memfault Build Id | GNU Build Id | Software Type & Version |
+| ------------------------------------------------------------------------ | ----------------- | ------------ | ----------------------- |
+| Example                                                                  | `a1e688...`       | `a1e688...`  | `wifi-fw`/`1.0.0`       |
+| Automatically generated hash                                             | ✅                | ✅           |
+| Manually chosen                                                          |                   |              | ✅                      |
+| Compiler requirement                                                     |                   | GNU/gcc      |                         |
+| ID embedded inside ELF                                                   | ✅                | ✅           |
+| ID passed manually upon Symbol File upload                               |                   |              | ✅                      |
+| Requires running Python script to post-process ELF                       | ✅                |              |
+| Minimum [SDK](https://github.com/memfault/memfault-firmware-sdk) version | 0.20.0            | 0.20.0       |                         |
 
 We recommend using either the Memfault Build Id or GNU Build Id option. The
 Build Ids are automatically generated based on the contents of the ELF file.
@@ -51,6 +52,14 @@ Build Id always takes precedence over Software Type & Version.
 :::
 
 ## Adding Build Ids
+
+:::note
+
+In order to use Build Ids for identification of Symbol Files & uploaded data,
+[SDK](https://github.com/memfault/memfault-firmware-sdk) version 0.20.0 or newer
+is required.
+
+:::
 
 <AddBuildId />
 
