MFLT-3742 Document how to send data to Memfault over UDP (#80)

--- a/docs/mcu/nrf-connect-sdk-guide.mdx
+++ b/docs/mcu/nrf-connect-sdk-guide.mdx
@@ -4,6 +4,8 @@ title: nRF Connect SDK Integration Guide
 sidebar_label: nRF Connect SDK
 ---
 
+import SendingDataOverUdp from "@site/src/pages/_partials/_sending-data-over-udp.mdx";
+
 import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
@@ -442,6 +444,10 @@ to help!
   data transfer in isolation.
 - A [GDB Script](/docs/mcu/test-data-collection-with-gdb) which can be installed
   to send chunks programatically every time a breakpoint is hit.
+
+## Sending data to Memfault over UDP
+
+<SendingDataOverUdp />
 
 ## Useful links
 
